--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,136 +1,70 @@
-@import url("https://fonts.googleapis.com/css2?family=Niramit:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 .navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 20px;
   text-transform: uppercase;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 14px;
   letter-spacing: 1px;
+  padding: 10px;
+  max-width: 1200px;
+  margin: auto;
 }
-.navbar .myName-box {
-  width: 13px;
-  height: 13px;
-  background-color: white;
-  border-radius: 3px;
-  animation: roleBox 2s linear infinite;
+.navbar .navbar-logo h3 {
+  font-family: "Poppins", sans-serif;
+  line-height: 50px;
+  font-weight: 800;
 }
-@keyframes roleBox {
-  20% {
-    transform: skew(30deg);
-  }
-  40% {
-    transform: skewX(10deg);
-  }
-  60% {
-    transform: rotate(80deg);
-  }
-  80% {
-    transform: skew(10deg);
-  }
-  100% {
-    transform: skew(0deg);
-  }
+.navbar ul {
+  display: flex;
+  align-items: center;
+  gap: 30px;
 }
-.navbar .myName p {
-  font-size: 20px;
+.navbar a {
+  font-weight: 300;
+}
+.navbar ul li a:hover {
   font-weight: 900;
 }
-.navbar .myName {
-  display: flex;
-  align-items: center;
-  gap: 8px;
+.navbar .menuDiv,.navbar .closeNavbar{
+  display: none;
 }
-.navbar button {
+.navbar button{
+  text-transform: uppercase;
   background-color: transparent;
   border: none;
-  color: white;
-  text-transform: uppercase;
-  font-size: 17px;
+  letter-spacing: 1px;
   cursor: pointer;
-  font-weight: 900;
+}
+.navbar .navbar-icons{
+  font-size: 30px;
 }
 
-/* Navbar Links Styles */
-
-.navbar ul {
-  position: fixed;
-  left: 0%;
-  width: 100%;
-  height: 100%;
-  background-color: #e7e7e7;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  list-style: none;
-  gap: 30px;
-  transition: all 0.4s linear;
-  user-select: none;
-}
-.navbar .openAndcloseNavbar {
-  top: 0%;
-}
-@keyframes heightIncrease {
-  20% {
-    height: 20%;
+@media only screen  and  (max-width:670px){
+  .navbar .menuDiv,.navbar .closeNavbar{
+    display: block;
   }
-  40% {
-    height: 40%;
+  .navbar .closeNavbar{
+    position: absolute;
+    right: 20px;
+    top: 20px;
   }
-  60% {
-    height: 60%;
+  .navbar .navbar-links{
+    padding: 20px 0;
+    position: fixed;
+    left: 0%;
+    width: 100%;
+    background-color: rgba(124, 121, 121, 0.925);
+    transition: all 0.3s linear;
+    padding: 0 6px;
+    z-index: 9999;
   }
-  80% {
-    height: 80%;
+  .navbar .navbar-links ul{
+    flex-direction: column;
+    padding: 30px 0;
+    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
   }
-  100% {
-    height: 100%;
+  .navbar a{
+    color: white;
+    font-weight: 200;
   }
-}
-.navbar ul button {
-  position: absolute;
-  right: 3%;
-  top: 3%;
-  color: black;
-  font-weight: 900;
-}
-.navbar ul li a {
-  font-family: "Poppins", sans-serif;
-  color: rgba(0, 0, 0, 0.671);
-  text-decoration: none;
-  font-weight: 800;
-  font-size: 40px;
-}
-.navbar ul li {
-  line-height: 60px;
-  height: 60px;
-  overflow: hidden;
-}
-.navbar ul li div {
-  transform: translateY(60px);
-  color: black;
-  position: relative;
-  transition: all 0.2s linear;
-}
-.navbar ul li div::after {
-  cursor: pointer;
-  font-weight: 800;
-  font-size: 40px;
-  position: absolute;
-  top: -60px;
-  left: 50%;
-  transform: translate(-50%, 0%);
-  white-space: nowrap;
-}
-.navbar ul li:nth-child(2) div::after {
-  content: "home";
-}
-.navbar ul li:nth-child(3) div::after {
-  content: "about us";
-}
-.navbar ul li:nth-child(4) div::after {
-  content: "projects";
-}
-.navbar ul li:hover > div {
-  transform: translateY(0px);
 }
